[package]
name = "msfs"
version = "0.0.0-pre.1"
authors = ["snek"]
edition = "2018"
description = "Rust bindings for the MSFS SDK"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.53"
