[package]
name = "msfs"
version = "0.1.0"
authors = ["snek"]
edition = "2018"
description = "Rust bindings for the MSFS SDK"
license = "MIT"

[dependencies]
msfs_derive = { path = "../msfs_derive", version = "0.2.0" }
futures = "0.3"
libc = "0.2"

[build-dependencies]
bindgen = "0.69"
msfs_sdk = { path = "../msfs_sdk", version = "0.1.0" }
cc = "1.0"
