[package]
name = "msfs"
version = "0.2.0"
authors = ["snek"]
edition = "2024"
description = "Rust bindings for the MSFS SDK"
license = "MIT"

[dependencies]
msfs_derive = { path = "../msfs_derive", version = "0.3.0" }
futures = "0.3"
libc = "0.2"

[build-dependencies]
bindgen = "0.71.1"
msfs_sdk = { path = "../msfs_sdk", version = "0.2.0" }
cc = "1.0"
