[package]
name = "msfs_derive"
version = "0.1.0"
authors = ["snek"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[build-dependencies]
msfs_sdk = { path = "../msfs_sdk" }
