[package]
name = "msfs_derive"
version = "0.2.0"
authors = ["snek"]
edition = "2018"
description = "This crate provides macros for MSFS"
license = "MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
